Fix SonarQube bugs (#645)